<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_for_fill_screen_elements"
        android:layout_marginEnd="@dimen/margin_for_fill_screen_elements"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        app:rowCount="4">

        <TextView
            android:id="@+id/textView_editSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rocknroll_one"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView_editEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/rocknroll_one"
            android:gravity="center_vertical"
            android:text="@string/age"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView_editPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rocknroll_one"
            android:gravity="center_vertical"
            android:text="@string/weight"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="2" />

        <Spinner
            android:id="@+id/EditText_EditProfile_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/EditText_add_data_weight"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_gravity="center|center_vertical"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView_editAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rocknroll_one"
            android:gravity="center_vertical"
            android:text="@string/height"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_gravity="right|center_vertical"
            app:layout_row="3" />

        <Spinner
            android:id="@+id/EditText_EditProfile_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/EditText_add_data_height"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_gravity="center|fill_vertical"
            app:layout_row="3" />

        <Spinner
            android:id="@+id/EditText_EditProfile_Edad"
            android:layout_height="wrap_content"
            android:contentDescription="@string/EditText_add_data_age"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_gravity="center|center_vertical"
            app:layout_row="1" />

        <Spinner
            android:id="@+id/EditText_EditProfile_Sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/EditText_add_data_sex"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_gravity="center|center_vertical"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977">

        <Button
            android:id="@+id/btn_editprofile_confirm"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="@dimen/margin_for_fill_screen_elements"
            android:layout_marginEnd="@dimen/margin_for_fill_screen_elements"
            android:layout_weight="1"
            android:fontFamily="@font/rocknroll_one"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/btn_editprofile_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/rocknroll_one"
            android:text="@string/cancel" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="238dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        app:srcCompat="@drawable/sofit" />

    <Button
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:fontFamily="@font/rocknroll_one"
        android:text="@string/change_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.033" />

</androidx.constraintlayout.widget.ConstraintLayout>