<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_for_fill_screen_elements"
            android:layout_marginEnd="@dimen/margin_for_fill_screen_elements"
            android:layout_weight="1"
            tools:layout_marginTop="@dimen/margin_for_fill_screen_elements">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView_series"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextView_add_data_weight"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font_size" />

                <EditText
                    android:id="@+id/TextEdit_series"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/EditText_add_data_weight"
                    android:textSize="@dimen/big_font_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView_repetitions"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextView_add_data_fat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font_size" />

                <EditText
                    android:id="@+id/TextEdit_repetitions"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/EditText_add_data_fat"
                    android:textSize="@dimen/big_font_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/TextView_weight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextView_add_data_muscle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font_size" />

                <EditText
                    android:id="@+id/TextEdit_weight"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/EditText_add_data_muscle"
                    android:textSize="@dimen/big_font_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/TextView_sex"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextView_add_data_water"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font_size" />

                <EditText
                    android:id="@+id/EditText_sex"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/EditText_add_data_water"
                    android:textSize="@dimen/big_font_size" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="@dimen/distance_margin_of_button_top"
            android:layout_marginBottom="@dimen/distance_margin_of_button_bottom">


            <Button
                android:id="@+id/button_actualizar_datos"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:text="@string/confirm"
                tools:textSize="@dimen/small_font_size"></Button>

            <Button
                android:id="@+id/button_fotoPerfil"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                tools:textSize="@dimen/small_font_size"></Button>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>