<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="411dp"
        android:layout_height="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabItem_progress_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_progress_tab_weight"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="112dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabItem_progress_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_progress_tab_body_fat"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="79dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabItem_progress_muscle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_progress_tab_body_muscle_mass" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabItem_progress_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_progress_tab_body_body_water" />
    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="379dp"
        android:layout_height="57dp"
        android:text="@string/my_progress_add_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="432dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.25">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/idGraphView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>