<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84">


        <Button
            android:id="@+id/button_actualizar_datos"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:text="@string/updateData"
            android:textSize="@dimen/small_font_size"></Button>

        <Button
            android:id="@+id/button_fotoPerfil"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:text="@string/changeProfilePic"
            android:textSize="@dimen/small_font_size"></Button>
    </LinearLayout>

    <Button
        android:id="@+id/button_verProgreso"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/showProgress"
        android:textSize="@dimen/big_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_for_fill_screen_elements"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="@dimen/margin_for_fill_screen_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TextView_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/big_font_size"
                tools:textAlignment="center" />

            <TextView
                android:id="@+id/textView_sex_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/big_font_size"
                tools:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/big_font_size"
                tools:textAlignment="center" />

            <TextView
                android:id="@+id/textView_weight_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/big_font_size"
                tools:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/big_font_size"
                tools:textAlignment="center" />

            <TextView
                android:id="@+id/textView_height_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/big_font_size"
                tools:textAlignment="center" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>